Closed Bug 58281 Opened 25 years ago Closed 25 years ago

Memory leaks in nsHTMLEditor.cpp

Categories

(Core :: DOM: Editor, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: sfraser_bugs, Assigned: mozeditor)

Details

(Keywords: memory-leak)

Attachments

(1 file)

The following lines have bad refcounting behaviour: 2634: nsCOMPtr<nsISupports> isupports = nodeList->ElementAt(0); 2690: nsCOMPtr<nsISupports> isup = nodeList->ElementAt(0); 2719: nsCOMPtr<nsISupports> isupports = nodeList->ElementAt(j); 2766: nsCOMPtr<nsISupports> isupports = listAndTableArray-> ElementAt(highWaterMark); 2772: isup = nodeList->ElementAt(0); etc etc. nsHTMLEditor doesn't even compile in an optimized build, seeminly because InsertHTMLWithCharsetAndContext() is so large. This needs fixing also.
needs dontAddRef wrapper.
Status: NEW → ASSIGNED
moz o.9
Target Milestone: --- → mozilla0.9
moving a bunch of 0.9 bugs to 0.9.1
Target Milestone: mozilla0.9 → mozilla0.9.1
nominating for dogfood (from sdagley's list of bugs that are good candidates for our next release)
Keywords: nsdogfood
Keywords: nsCatFood
Keywords: nsdogfood
attaching patch, need sr
Thanks for fixing these Joe! sr=kin@netscape.com
r=sfraser
checked in last night.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
simon/joe, please verify this one...thanks
marking verified.....
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: