bug 58281: fixing mem leaks when shuffling nsISupports around in editor paste code.  r=fm; sr=kin